--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "1.0.0",
   "author": {
     "name": "Ahmed Rowaihi",
-    "url": ""
+    "url": "https://github.com/ahmedrowaihi/twitter-scraper.git"
   },
   "main": "main.js",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.17.2",
     "puppeteer": "^13.1.1"
+  },
+  "scripts": {
+    "dev": "nodemon main.js"
   },
   "devDependencies": {
     "@types/puppeteer": "^5.4.4"
